--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,24 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://swx.cdn.skype.com/shared/v/1.2.15/SkypeBootstrap.min.js"></script>
+    <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
     <div id="root"></div>
+    <script>
+      Skype.initialize({ apiKey: 'a42fcebd-5b43-4b89-a065-74450fb91255' }, api => {
+        var app = new api.application;
+        
+        app.signInManager.signIn ({
+          username: 'nishkohli96',
+          password: '18nickpatmolt96'
+        }).then(() => {
+          console.log("signed in as", app.personsAndGroupsManager.mePerson.displayName());
+        }, err => {
+          console.log("cannot sign in", err);
+        });
+      }, err => {
+        console.log("cannot load the sdk package", err);
+      });
+    </script>
   </body>
 </html>
